--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,4 +27,4 @@ jobs:
     - run: flutter pub get
     - run: flutter test
     - run: flutter build apk
-    - run: flutter build ios --release --no-codesign
+    - run: flutter build ios --debug --no-codesign
