--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,8 +23,8 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version: '1.22.4'
+        flutter-version: '1.22.5'
     - run: flutter pub get
     - run: flutter test
-    - run: flutter build apk
-    - run: flutter build ios --debug --no-codesign
+#     - run: flutter build apk
+    - run: flutter build ios --release --no-codesign
