--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
 
   shimmer: ^1.1.2
+  freezed_annotation: ^0.12.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -34,6 +35,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  freezed: ^0.12.2
 
 flutter_gen:
   colors:
