--- a/.github/workflows/flutter_android.yml
+++ b/.github/workflows/flutter_android.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         flutter-version: '1.22.5'
     - run: flutter pub get # update dependencies
-    - run: flutter pub run build_runner build # code generation freezed 
+    - run: flutter pub run build_runner build --delete-conflicting-outputs# code generation freezed 
     - run: flutter test
     - run: flutter build apk
 #     - run: flutter build ios --release --no-codesign
